--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thoroughlycleaned",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -18,25 +18,27 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.7.1",
     "@reduxjs/toolkit": "^2.2.4",
-    "i18next": "^23.2.7",
+    "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^13.0.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "next": "14.2.16"
+    "twilio": "^5.3.5",
+    "uifx": "^2.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "prisma": "^5.15.1"
+    "postcss": "^8",
+    "prisma": "^5.15.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
