--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.7.1",
     "@reduxjs/toolkit": "^2.2.4",
+    "firebase": "^10.12.2",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
