--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "uifx": "^2.0.7"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
