--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.5",
+    "@next/third-parties": "^15.0.3",
     "@prisma/client": "^5.7.1",
     "@reduxjs/toolkit": "^2.2.4",
     "firebase": "^10.12.2",
