--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thoroughlycleaned",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "twilio": "^5.3.5",
