--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "thoroughlycleaned",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "npm run generate && next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
@@ -12,34 +14,36 @@
     "generate": "prisma generate"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@heroicons/react": "^2.1.5",
     "@next/third-parties": "^15.0.3",
     "@prisma/client": "^5.7.1",
     "@reduxjs/toolkit": "^2.2.4",
     "firebase": "^10.12.2",
-    "next": "14.2.16",
+    "next": "^15.0.3",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
+    "react-slick": "^0.30.2",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "twilio": "^5.3.5",
     "uifx": "^2.0.7"
   },
   "devDependencies": {
+    "@types/eslint": "^9.6.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "@types/react-slick": "^0.23.13",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "^15.0.3",
     "postcss": "^8",
     "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1",
