--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thoroughlycleaned",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,6 +20,7 @@
     "@next/third-parties": "^15.0.3",
     "@prisma/client": "^5.7.1",
     "@reduxjs/toolkit": "^2.2.4",
+    "aos": "^2.3.4",
     "firebase": "^10.12.2",
     "next": "^15.0.3",
     "next-sitemap": "^4.2.3",
@@ -35,6 +36,7 @@
     "uifx": "^2.0.7"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/eslint": "^9.6.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
