--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "thoroughlycleaned",
-  "version": "1.3.5",
+  "version": "1.4.5",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "npm run generate && next build",
-    "postbuild": "next-sitemap --config ./next-sitemap.config.js",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
